...
                onClicked(null)
            }, title = "Add Information"
        )
        if (showDatePicker) {

            DatePickerDialog(
                modifier = Modifier.testTag("datePicker"),
                onDismissRequest = { showDatePicker = false },
                confirmButton = {
                    TextButton(
                        onClick = {
                            showDatePicker = false
                            val date = formatDateFromMilliseconds(dateState.selectedDateMillis ?: System.currentTimeMillis())
...
                            d.time = dateState.selectedDateMillis ?: System.currentTimeMillis()
                            val monthName = SimpleDateFormat("MMMM yyyy", Locale.getDefault())
                                .format(d)

                            saveInfoViewModel?.updateItemName(currentItem.value.copy(date = date, monthName = monthName),currentIndex.intValue)
                        }
                    ) { Text("OK") }
                }
            ) {
                DatePicker(
                    state = dateState
                )
            }
        }
        LazyColumn(modifier = Modifier.imePadding().imeNestedScroll().testTag("lazyColumn"), state = lazyColumnState) {
            itemsIndexed(getExpenseInfoListState?.value.orEmpty()){index, item ->
                Box {
                    Column(
                        modifier = Modifier
                            .padding(16.dp)
                    ) {
...
