...
        Column(
            horizontalAlignment = Alignment.CenterHorizontally,
            verticalArrangement = Arrangement.Center
        ) {
            Image(
                painter = painterResource(R.drawable.expenses),
                contentDescription = "splashLogo",
                modifier = Modifier
                    .width(150.dp)
                    .height(150.dp)
            )
            Text(
                modifier = Modifier
...
