...
                style = semiBoldFont.copy(
                fontSize = 20.sp,
                textAlign = TextAlign.Start,
                color = colorResource(R.color.redFavorite),)
            )

            AnimatedVisibility(selectionMode.value.not(), modifier = Modifier.testTag("AddButton")) {
                IconButton(modifier = Modifier.padding(horizontal = 10.dp),
                    colors = IconButtonDefaults.iconButtonColors(contentColor = Color.White,
                        disabledContentColor = Color.Transparent,
                        containerColor = darkBlue),
                    onClick = {
                    onClicked(Screens.SaveInfoScreen(false))
...
